HEAD
	+ Added missing table-helper.js dependency to treeView template
4.0.9
	+ Update commercial edition repo when upgrading to 4.1
4.0.8
	+ Remove antivirus and mailfilter from upgrade to 4.1 warning
4.0.7
	+ Upgrade to Zentyal 4.1 button in dashboard
	+ Removed support for SSLv2 & SSLv3. Using recommended ciphers from:
	  https://wiki.mozilla.org/Security/Server_Side_TLS
	  (contribution by theodorerambert)
4.0.6
	+ Fix remoteservices username/email migration when upgrading from 3.2
4.0.5
	+ Enable sending crash report with no debug mode
4.0.4
	+ Added subscription migration when upgrading from 3.2
	+ Manage correctly internal errors in data table controller
4.0.3
	+ More robust management of administration user accounts
	+ Fix not defined domain in log's ConfigureLogs model
	+ When unsubscribing remove extra packages before saving changes
	+ Better check of versions numbers in backup restore
	+ Make EBox::MyDBEngine more reusable
	+ Modify webadmin service when upgrading from 3.2
	+ Show enable errors in module status table
4.0.2
	+ Remove incorrect directory not exists warnings
	+ Crash reports can be submitted also with global debug disabled
4.0.1
	+ Save changes does redirection after 10 consecutive failed requests
	+ Hide useless revoke button in OpenChange vdomains table
4.0
	+ sudoers-friendly take user to whatever module which implenents extraSudoerUsers
	+ Implement data in use in JS for forms
	+ Fixed ManageAdmins model and offer it in all editions
	+ Pass row argument to editable function handler
	+ Enable automatic updates on commercial servers by default
	+ Remove excessive top margin for first child fields in forms
	+ Better warning in change hostname confirmation dialog
	+ Confirmation dialog action recovers correctly from errors
	+ Make webadmin certificate modifiable via CA module
	+ Better control of error in local backup confirmation dialog
	+ Fixed i18n bug in progress dialog
	+ Updated remoteservices dependencies