@@ -11,7 +11,7 @@ if ($qa) {
     $msg = __s('Your commercial server edition guarantees that these are quality assured software updates and will be automatically applied to your system.');
     $class = 'ad';
 } else {
-    $msg =  __sx("Warning: These are untested community updates that might harm your system. In production environments we recommend using the {oh}Professional, Business or Premium Editions{ch}: commercial Zentyal server editions fully supported by Zentyal S.L. and Canonical/Ubuntu.", oh => '<a href="' . EBox::Config::urlEditions() . '" target="_blank">', ch => '</a>');
+    $msg =  __sx("Warning: These are untested community updates that might harm your system. In production environments we recommend using the {oh}Commercial Edition{ch}: commercial Zentyal server editions fully supported by Zentyal S.L. and Canonical/Ubuntu.", oh => '<a href="' . EBox::Config::urlEditions() . '" target="_blank">', ch => '</a>');
 	$class = 'adwarning';
 }
 </%init>
