@@ -1,4 +1,5 @@
 HEAD
+	+ New commercial edition
 	+ Added missing table-helper.js dependency to treeView template
 4.0.9
 	+ Update commercial edition repo when upgrading to 4.1
